--- a/package.json
+++ b/package.json
@@ -4,26 +4,23 @@
  "description": "",
  "main": "index.js",
  "scripts": {
-	"test": "npm-run-all test:*",
-	"test:html": "globstar nu-html-checker *.html",
-
-	"init-project": "npm install && npm-run-all init:*",
-	"init:dirs": "mkdirp sass css vendor images js",
-	"init:files": "touch README.md index.html sass/style.scss js/script.js",
-	"init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-
-	"build": "npm-run-all build:* test",
-        "build:clean": "rimraf css/*.css",
-	"build:sass": "node-sass --output-style compact -o css sass",
-	"build:autoprefixer": "autoprefixer-cli css/style.css",
-
-	"build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
-
-	"watch": "npm-run-all build -p watch:sassprefixer watch:browsersync",
-	"watch:sass": "node-sass --output-style expanded --source-map true -o css sass ",
-	"watch:autoprefixer": "autoprefixer-cli css/style.css",
-        "watch:sassprefixer": "onchange -d 100 sass/*.scss -- npm-run-all watch:sass watch:autoprefixer",
-        "watch:browsersync": "browser-sync start --server --files css/*.css *.html"
+  "test": "npm-run-all test:*",
+  "test:html": "globstar nu-html-checker *.html",
+  "test:js": "jshint js/*.js",
+  "init-project": "npm install && npm-run-all init:*",
+  "init:dirs": "mkdirp sass css vendor images js",
+  "init:files": "touch README.md index.html sass/style.scss js/script.js",
+  "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
+  "build": "npm-run-all build:* test",
+  "build:clean": "rimraf css/*.css",
+  "build:sass": "node-sass --output-style compact -o css sass",
+  "build:autoprefixer": "autoprefixer-cli css/style.css",
+  "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
+  "watch": "npm-run-all build -p watch:sassprefixer watch:browsersync",
+  "watch:sass": "node-sass --output-style expanded --source-map true -o css sass ",
+  "watch:autoprefixer": "autoprefixer-cli css/style.css",
+  "watch:sassprefixer": "onchange -d 100 sass/*.scss -- npm-run-all watch:sass watch:autoprefixer",
+  "watch:browsersync": "browser-sync start --server --files css/*.css *.html"
  },
  "author": "",
  "license": "ISC",
@@ -32,5 +29,8 @@
   "browser-sync": "^2.23.6",
   "node-sass": "^4.8.3",
   "nu-html-checker": "^0.1.0"
+ },
+ "dependencies": {
+  "jshint": "^2.9.5"
  }
 }
